﻿Pulse_Waves Changelog

Pulse_Waves-1.8.0
 - Added options to replace press with vertical beam.
 - Added options for heading, pitch and roll offset.
 - Changed the UI layout for Recover page.

Pulse_Waves-1.7.0
 - In WaveRecord, added VertPressure and VertRangeTracking to seperate from 4 beam values.

Pulse_Waves-1.6.0
 * In WavesSubsystemConfigurationViewModel, if CBI is disabled, then make a zero CBI command.
 * In WavesSetupViewModel, fix deployment duration for multiple configurations.

Pulse_Waves-1.5.2
 * Changed the CepoIndex in the command to a Hex value.

Pulse_Waves-1.5.1
 * Updated Prediction Model for Absorption, and Narrowband calculations.

Pulse_Waves-1.5.0
 * Fixed a bug with DecodeCSHOW for CWPRT and CBI.
 * Updated Prediction Model System Init Time.

Pulse_Waves-1.4.0
 - Redesigned the Setup page to use a tab.
 - Updated the Prediction Model for power usage.
 - Added AutoUpdater when you click About.

Pulse_Waves-1.3.3
 - Updated Prediction Model System Init Time to 2.6.
 - Updated Prediction Model range table.

Pulse_Waves-1.3.2
 - Add absorption into prediction model.

Pulse_Waves-1.3.1
 - Change default RangeTracking to Pressure.

Pulse_Waves-1.3.0
 - Fixed the Prediction model by changing the System Init Time from 0.25sec to 2.4sec.

Pulse_Waves-1.2.2
 - Fix bug loading Wavector.
 - Added a default path for Wavector.
 - Updated the Prediction model on startup.  
 - Fixed bug with not passing BurstInterval to prediction model.
 - RtiWavesEncoder, fixed a bug iterating through the list of MATLAB files and list is changed.

Pulse_Waves-1.2.1
 - Fixed bug in Prediction model with calculating the data storage.

Pulse_Waves-1.2.0
  - Updated the prediction model.

Pulse_Waves-1.1.8
 - Set CWPTBP automatically based off CEI and number of pings.

Pulse_Waves-1.1.7
 - Changed file import to handle large files.

Pulse_Waves-1.1.6