@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 1.6.0 ChangeLog</title>
+		<title>Version 1.9.0 ChangeLog</title>
 		<style type="text/css">
 .auto-style1 {
 	text-decoration: underline;
@@ -10,7 +10,18 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse Waves-1.6.0</span>
+            <br /><span class="auto-style1">Pulse Waves-1.9.0</span>
+            <br />  Pulse_Waves-1.9.0
+            <br />  - Updated Software to handle BurstID and Interleave count.
+            <br />
+            <br />  Pulse_Waves-1.8.0
+            <br />  - Added options to replace press with vertical beam.
+            <br />  - Added options for heading, pitch and roll offset.
+            <br />  - Changed the UI layout for Recover page.
+            <br />
+            <br />  Pulse_Waves-1.7.0
+            <br />  - In WaveRecord, added VertPressure and VertRangeTracking to seperate from 4 beam values.
+            <br />
             <br />  Pulse_Waves-1.6.0
             <br />  * In WavesSubsystemConfigurationViewModel, if CBI is disabled, then make a zero CBI command.
             <br />  * In WavesSetupViewModel, fix deployment duration for multiple configurations.
